# easy-thumbnails

./: setup.cfg
easy_thumbnails/: __init__.py
