[metadata]
name = easy-thumbnails
version = attr:easy_thumbnails.__version__
url = http://github.com/SmileyChris/easy-thumbnails
description = Easy thumbnails for Django
author = Chris Beaven
author_email = smileychris@gmail.com

[options]
packages = find:
include_package_data = True
install_requires =
    django>=3.2
    pillow
python_requires = >=3.6
zip_safe = False
